--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
     </properties>
     <dependencies>
 
-<!--        spring-->
+        <!--        spring-->
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-webmvc</artifactId>
@@ -28,7 +28,7 @@
         </dependency>
 
 
-<!--        database-->
+        <!--        database-->
         <dependency>
             <groupId>jakarta.persistence</groupId>
             <artifactId>jakarta.persistence-api</artifactId>
@@ -45,7 +45,7 @@
             <version>42.3.8</version>
         </dependency>
 
-<!--        swagger-->
+        <!--        swagger-->
         <dependency>
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger2</artifactId>
@@ -58,7 +58,7 @@
             <version>3.0.0</version>
         </dependency>
 
-<!--        testing-->
+        <!--        testing-->
 
         <dependency>
             <groupId>junit</groupId>
@@ -78,6 +78,12 @@
             <version>3.12.4</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-junit-jupiter</artifactId>
+            <version>3.12.4</version>
+            <scope>test</scope>
+        </dependency>
 
         <!--        logging-->
         <dependency>
@@ -90,7 +96,7 @@
             <artifactId>logback-classic</artifactId>
             <version>1.2.6</version> <!-- Use the latest version available -->
         </dependency>
-<!--        utils-->
+        <!--        utils-->
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
