--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 server.port=8082
+
+spring.security.user.name=admin
+spring.security.user.password=admin-password
+
+management.endpoints.web.exposure.include=*
+management.endpoint.metrics.enabled=true
