--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,6 @@ spring.security.user.name=admin
 spring.security.user.password=admin-password
 
 management.endpoints.web.exposure.include=*
+management.endpoint.health.roles=USER
+management.endpoint.health.show-details=always
 management.endpoint.metrics.enabled=true
