health metrics and profiles have been added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,1 @@
-server.port=8082
-
-spring.security.user.name=admin
-spring.security.user.password=admin-password
-
-management.endpoints.web.exposure.include=*
-management.endpoint.health.roles=USER
-management.endpoint.health.show-details=always
-management.endpoint.metrics.enabled=true
+spring.profiles.active=prod
