--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,6 +1,13 @@
 server.port=8082
 
-management.endpoints.web.exposure.include=health, metrics, prometheus
+
+
+
+management.endpoints.web.exposure.include=*
+management.endpoint.metrics.enabled=true
+management.prometheus.metrics.export.enabled=true
+
+#management.endpoints.web.exposure.include=health, metrics, prometheus
 
 #management.endpoints.enabled-by-default=false
 
