--- a/src/main/resources/prometheus.yml
+++ b/src/main/resources/prometheus.yml
@@ -21,14 +21,10 @@ rule_files:
 scrape_configs:
   # The job name is added as a label `job=<job_name>` to any timeseries scraped from this config.
   - job_name: "prometheus"
+    metrics_path: '/actuator/prometheus'
 
     # metrics_path defaults to '/metrics'
     # scheme defaults to 'http'.
 
     static_configs:
       - targets: ["localhost:8082"]
-
-  - job_name: "springboot"
-    static_configs:
-      - targets: ["localhost:8082"]
-    metrics_path: /actuator/prometheus
