logging and properties have been fixed

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,6 +1,10 @@
 server.port=8082
 
-
 management.endpoints.web.exposure.include=*
 management.endpoint.metrics.enabled=true
 management.prometheus.metrics.export.enabled=true
+management.endpoint.health.show-details=always
+
+db.url=jdbc:postgresql://localhost:5432/gymdbdev
+db.username=postgres
+db.password=1223
