--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,22 +1,11 @@
-server.port=8082
-
-
-
+server.port=8080
 
 management.endpoints.web.exposure.include=*
 management.endpoint.metrics.enabled=true
 management.prometheus.metrics.export.enabled=true
+management.endpoint.health.show-details=when_authorized
 
-#management.endpoints.web.exposure.include=health, metrics, prometheus
 
-#management.endpoints.enabled-by-default=false
-
-##health
-#management.endpoint.health.enabled=true
-#management.endpoint.health.roles=USER
-#management.endpoint.health.show-details=when_authorized
-#
-##metrics
-#management.endpoint.metrics.enabled=true
-#management.endpoint.metrics.roles=USER
-#management.endpoint.metrics.show-details=when_authorized
+db.url=jdbc:postgresql://localhost:5432/gymDb
+db.username=postgres
+db.password=1223
