--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,12 @@
             <artifactId>lombok</artifactId>
             <version>LATEST</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.13</version> <!-- Replace with the latest version available -->
+        </dependency>
+
     </dependencies>
     <build>
         <plugins>
