--- a/pom.xml
+++ b/pom.xml
@@ -101,6 +101,12 @@
             <version>4.5.13</version> <!-- Replace with the latest version available -->
         </dependency>
 
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>30.1-jre</version>
+        </dependency>
+
     </dependencies>
     <build>
         <plugins>
