task has been completed

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,11 +1,20 @@
 server.port=8080
 
+# Actuator
 management.endpoints.web.exposure.include=*
 management.endpoint.metrics.enabled=true
 management.prometheus.metrics.export.enabled=true
 management.endpoint.health.show-details=when_authorized
 
-
+# Database
 db.url=jdbc:postgresql://localhost:5432/gymDb
 db.username=postgres
 db.password=1223
+
+
+# CORS
+cors.allowed-origins=*
+cors.allowed-methods=GET,POST,PUT,DELETE
+cors.allowed-headers=*
+cors.allow-credentials=false
+cors.max-age=3600
