--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,10 +1,20 @@
 server.port=8082
 
+# Actuator
 management.endpoints.web.exposure.include=*
 management.endpoint.metrics.enabled=true
 management.prometheus.metrics.export.enabled=true
 management.endpoint.health.show-details=always
 
+# Database
 db.url=jdbc:postgresql://localhost:5432/gymdbdev
 db.username=postgres
 db.password=1223
+
+
+# CORS
+cors.allowed-origins=
+cors.allowed-methods=GET,POST,PUT,DELETE
+cors.allowed-headers=*
+cors.allow-credentials=false
+cors.max-age=3600
