--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -18,3 +18,8 @@ cors.allowed-methods=GET,POST,PUT,DELETE
 cors.allowed-headers=*
 cors.allow-credentials=false
 cors.max-age=3600
+
+# Security
+jwt.secretKey=qwqwoi398wjdn98329hdfjs!@#$@
+# expireTime is an hour
+jwt.expireTime=3_600_000
