--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -18,3 +18,7 @@ cors.allowed-methods=GET,POST,PUT,DELETE
 cors.allowed-headers=*
 cors.allow-credentials=false
 cors.max-age=3600
+
+# Security
+jwt.secretKey=qwqwoi398wjdn98329hdfjs!@#$@
+jwt.expireTime=3_600_000
