password hashing salt has been moved to properties file

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -23,3 +23,4 @@ cors.max-age=3600
 jwt.secretKey=qwqwoi398wjdn98329hdfjs!@#$@
 # expireTime is an hour
 jwt.expireTime=3_600_000
+password.salt=123Utkirbek!@#Qutfiddinov?Epam:Task
