stored random passwordSalt in DB for each user individualls

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -21,6 +21,5 @@ cors.max-age=3600
 
 # Security
 jwt.secretKey=qwqwoi398wjdn98329hdfjs!@#$@
-# expireTime is an hour
-jwt.expireTime=3_600_000
+jwt.expireTime=3600000
 password.salt=123Utkirbek!@#Qutfiddinov?Epam:Task
