--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -21,5 +21,5 @@ cors.max-age=3600
 
 # Security
 jwt.secretKey=qwqwoi398wjdn98329hdfjs!@#$@
-jwt.expireTime=3_600_000
+jwt.expireTime=3600000
 password.salt=123Utkirbek!@#Qutfiddinov?Epam:Task
